<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/edit_user_header"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/user_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_user_name_text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/first_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_first_name_text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/last_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_last_name_text"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/save_button_text" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout_button_text" />

    </LinearLayout>

</LinearLayout>